Update and rename ｃｏｄｅ２ to ｃｏｄｅ２.md

--- a/ex10/ｃｏｄｅ２.md
+++ b/ex10/ｃｏｄｅ２.md
@@ -1,4 +1,4 @@
-｀｀｀
+```python
 import numpy as np
 import matplotlib.pyplot as plt
 class elliptical_orbit(object):
@@ -44,4 +44,4 @@ class elliptical_orbit(object):
 a=elliptical_orbit(5.0/9,0.8)
 a.calculate()
 a.show_results()
-｀｀｀
+```
